--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,17 +1,17 @@
 // make a list of all your custom transformers
 // the list contains the fully-qualified class names of the
 // OpNode implementations for your transformers
-my.domain.mleap.ops = ["com.blackswan.mleapDemo.customTransformer.mleap.WordLengthFilter"]
+org.example.mleapDemo.customTransformer.mleap.ops = ["org.example.mleapDemo.customTransformer.mleap.ops.WordLengthFilterOp"]
 
 // include the custom transformers we have defined to the default MLeap registry
-ml.combust.mleap.registry.default.ops += "com.blackswan.mleapDemo.customTransformer.mleap"
+ml.combust.mleap.registry.default.ops += "org.example.mleapDemo.customTransformer.mleap"
 
 // make a list of all your custom transformers
 // the list contains the fully-qualified class names of the
 // OpNode implementations for your transformers
-my.domain.mleap.spark.ops = ["com.blackswan.mleapDemo.customTransformer.spark.ops.WordLengthFilterOp"]
+org.example.mleapDemo.customTransformer.spark.ops = ["org.example.mleapDemo.customTransformer.spark.ops.WordLengthFilterOp"]
 
 // include the custom transformers ops we have defined to the default Spark registries
-ml.combust.mleap.spark.registry.v20.ops += com.blackswan.mleapDemo.customTransformer.spark.ops
-ml.combust.mleap.spark.registry.v21.ops += com.blackswan.mleapDemo.customTransformer.spark.ops
-ml.combust.mleap.spark.registry.v22.ops += com.blackswan.mleapDemo.customTransformer.spark.ops
+ml.combust.mleap.spark.registry.v20.ops += org.example.mleapDemo.customTransformer.spark.ops
+ml.combust.mleap.spark.registry.v21.ops += org.example.mleapDemo.customTransformer.spark.ops
+ml.combust.mleap.spark.registry.v22.ops += org.example.mleapDemo.customTransformer.spark.ops
