--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 scala_version=2.11
-jackson_version=2.6.5
+jackson_version=2.9.1
 aws_client_version=1.11.193
 mleap_version=0.8.1
+spark_version=2.2.0
